# actor_mpi

./: .gitignore  CMakeLists.txt  download_scenarios.sh  notes
CMake-Aux/: get_libs.sh
CMake-Aux/Modules/: FindMetis.cmake
env/: intel_par_debug.sh  intel_par_o3.sh  intel_seq_debug.sh  intel_seq_o3.sh
jobs/: square_root.sh
jobscript-gen/: gen_slurm.py
misc/: Proposed Communication.pptx
misc/PlaceDistribution.playground/: Contents.swift  timeline.xctimeline
misc/PlaceDistribution.playground/Sources/: functions.swift
misc/PlaceDistribution.playground/playground.xcworkspace/xcuserdata/nax.xcuserdatad/: UserInterfaceState.xcuserstate
src/actorlib/: AbstractInPort.cpp  AbstractInPort.hpp  AbstractOutPort.cpp  AbstractOutPort.hpp  Actor.cpp  Actor.hpp  ActorGraph.cpp  ActorGraph.hpp  ActorRegistration.cpp  ActorRegistration.hpp  Channel.hpp  InPort.cpp  InPort.hpp  MPIHelper.h  OutPort.cpp  OutPort.hpp  Port.h  PortIdentification.h  config.cpp  config.hpp
src/actorlib/utils/: helper.h  mpi_helper.hpp  mpi_type_traits.h
src/applications/pond/: main.cpp
src/applications/pond/actor/: SimulationActor.cpp  SimulationActor.hpp
src/applications/pond/block/: BlockCommunicator.cpp  BlockCommunicator.hpp  SWE_Block.cpp  SWE_Block.hh  SWE_WaveAccumulationBlock.cpp  SWE_WaveAccumulationBlock.hh
src/applications/pond/orchestration/: ActorDistributor.cpp  ActorDistributor.hpp  ActorOrchestrator.cpp  ActorOrchestrator.hpp  FiedlerVectorActorDistributor.cpp  FiedlerVectorActorDistributor.hpp  MetisActorDistributor.cpp  MetisActorDistributor.hpp  SimpleActorDistributor.cpp  SimpleActorDistributor.hpp  dist.cpp
src/applications/pond/scenario/: NetCdfData.cpp  NetCdfData.hpp  NetCdfScenario.cpp  NetCdfScenario.hpp  SWE_Scenario.hh  SWE_simple_scenarios.hh  ScalablePoolDropScenario.cpp  ScalablePoolDropScenario.hpp  SimulationArea.cpp  SimulationArea.hpp
src/applications/pond/solver/: AugRie.hpp  AugRieCUDA.h  AugRieFun.hpp  AugRie_SIMD.hpp  FWave.hpp  FWaveCuda.h  FWaveVec.hpp  Hybrid.hpp  SIMD_COSTS.hpp  SIMD_DEFINITIONS.hpp  SIMD_TYPES.hpp  WavePropagation.hpp
src/applications/pond/util/: Configuration.cpp  Configuration.hpp  Logger.cpp  Logger.hh  ProgressBar.hh  args.hh  help.hh
src/applications/pond/writer/: NetCdfWriter.cpp  NetCdfWriter.hh  VtkWriter.cpp  VtkWriter.hh  Writer.hh
src/examples/channel_test/: main.cpp  tests.cpp  tests.hpp
src/examples/mpi_pingpong/: PingPongActor.cpp  PingPongActor.hpp  main.cpp
src/examples/pingpong/: PingPongActor.hpp  main.cpp
src/examples/square_root/: SinkActor.cpp  SinkActor.hpp  SourceActor.cpp  SourceActor.hpp  SquareRootActor.cpp  SquareRootActor.hpp  main.cpp
src/examples/type_traits/: main.cpp  mpi_helper.hpp  mpi_type_traits.h
test/: job.sh  main.cpp
tests/: main.cpp
